--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.15.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@fortawesome/fontawesome-free": "5.15.3",
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
+    "jquery": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
